k8s/service/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-my-app
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: {duration:10}
        - setWeight: 50
        - pause: {}
        - setWeight: 75
        - pause: {duration:10}
        - setWeight: 100
        - pause: {duration:10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-my-app
  template:
    metadata:
      labels:
        app: canary-my-app
    spec:
      containers:
        - name: canary-my-app
          image: how0326/marketboro:canary
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
