k8s/service/canary-rollout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: canary-my-app
  ports:
    - port: 80
      targetPort: 8080
  sessionAffinity: None
